--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
                 <div class="row mt-1 mt-sm-2 mt-lg-4 gx-5 gy-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="recent-work__info">
-                            <p><b>AI-Powered Content Repurposer <br>– Save Hours on Social Media Marketing</b></p>
+                            <p><b>Content Repurposer SaaS <br>– AI-Powered Content Repurposer for Social Media</b></p>
                         </div>
                         <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe
                                 src="https://www.loom.com/embed/72e04f8fb88f4624bf684b661dea00d4?sid=c97ce83c-1560-43e5-94f7-ceb576c9e117"
@@ -933,7 +933,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="recent-work__info">
-                            <p><b>AI-Powered Etsy Seller Tool <br>– Launch & Grow Shops Faster</b></p>
+                            <p><b>Etsy Seller Tool <br>– AI-Driven Platform for Etsy Sellers</b></p>
                         </div>
                         <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe
                                 src="https://www.loom.com/embed/a2858b2890b1476a87bbba1059aedaa7?sid=45ab711f-227c-4b49-806a-294f7716f2c7"
