--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
 
-    <meta name="description" content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses.">
-    <meta name="keywords" content="Phuong Hoang, MERN developer, AWS cloud apps, AI-powered applications, Milestone-based delivery, Reliable web apps, Full-stack development, Startup software solutions, Scalable web apps, End-to-end execution, Fast project delivery, Enterprise web development">
+    <meta name="description"
+        content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses.">
+    <meta name="keywords"
+        content="Phuong Hoang, MERN developer, AWS cloud apps, AI-powered applications, Milestone-based delivery, Reliable web apps, Full-stack development, Startup software solutions, Scalable web apps, End-to-end execution, Fast project delivery, Enterprise web development">
 
     <!-- Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Phuong Hoang | MERN, AWS & AI Developer | Milestone-Based Delivery" />
-    <meta property="og:description" content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses." />
+    <meta property="og:description"
+        content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses." />
 
     <meta property="og:url" content="https://phuong-hoang-delta.vercel.app/" />
     <meta property="og:site_name" content="Phuong Hoang Consulting" />
@@ -31,7 +34,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Phuong Hoang | MERN, AWS & AI Developer | Milestone-Based Delivery">
-    <meta name="twitter:description" content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses.">
+    <meta name="twitter:description"
+        content="Hire Phuong Hoang for milestone-based MERN, AWS, and AI-powered applications. Reliable, fast, and end-to-end execution for startups and businesses.">
     <meta name="twitter:image" content="https://phuong-hoang-delta.vercel.app/assets/images/preview.avif">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -139,7 +143,8 @@
                     <div class="col-lg-6">
                         <div class="hero-content">
                             <h1>Custom Web App Development Services</h1>
-                            <span class="mt-3">Milestone-Based Delivery for Startups & Small Businesses Using MERN, AWS, and AI.</span>
+                            <span class="mt-3">Milestone-Based Delivery for Startups & Small Businesses Using MERN, AWS,
+                                and AI.</span>
                             <div class="hero-frame mt-5 d-block d-lg-none">
                                 <img class="img-fluid" src="assets/images/hero-img.png" alt="Peyton Hoang">
                             </div>
@@ -251,28 +256,32 @@
                                 <h3>1.</h3>
                                 <div>
                                     <h4>Trusted by Startups & SMBs</h4>
-                                    <p>5-star reviews and repeat clients, delivering projects from SaaS MVPs to $30k enterprise web apps.</p>
+                                    <p>5-star reviews and repeat clients, delivering projects from SaaS MVPs to $30k
+                                        enterprise web apps.</p>
                                 </div>
                             </div>
                             <div class="benefits-content__list mt-2">
                                 <h3>2.</h3>
                                 <div>
                                     <h4>Zero Surprises, Fixed-Price Milestones</h4>
-                                    <p>Every custom web application is broken into reviewed milestones. So you pay only for what’s delivered.</p>
+                                    <p>Every custom web application is broken into reviewed milestones. So you pay only
+                                        for what’s delivered.</p>
                                 </div>
                             </div>
                             <div class="benefits-content__list mt-2">
                                 <h3>3.</h3>
                                 <div>
                                     <h4>Flexible & Founder-Friendly</h4>
-                                    <p>Start small, add features as you grow. Launch fast without overcommitting resources.</p>
+                                    <p>Start small, add features as you grow. Launch fast without overcommitting
+                                        resources.</p>
                                 </div>
                             </div>
                             <div class="benefits-content__list mt-2">
                                 <h3>4.</h3>
                                 <div>
                                     <h4>Stress-Free Communication</h4>
-                                    <p>Weekly updates and prompt responses keep you in control at every step of your web app development.
+                                    <p>Weekly updates and prompt responses keep you in control at every step of your web
+                                        app development.
                                     </p>
                                 </div>
                             </div>
@@ -280,7 +289,8 @@
                                 <h3>5.</h3>
                                 <div>
                                     <h4>Built to Scale</h4>
-                                    <p>Production-grade MERN + AWS + AI integrations, secure and maintainable code, with complete handover documentation.</p>
+                                    <p>Production-grade MERN + AWS + AI integrations, secure and maintainable code, with
+                                        complete handover documentation.</p>
                                 </div>
                             </div>
                         </div>
@@ -366,7 +376,8 @@
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Automation tools to save time, boost efficiency, and increase engagement.</span>
+                                    <span>Automation tools to save time, boost efficiency, and increase
+                                        engagement.</span>
                                 </div>
                             </div>
                         </div>
@@ -485,7 +496,8 @@
                     <div class="cta-container">
                         <h3>Ready to build fast, scalable, and future-proof solutions?</h3>
                         <p>
-                            Book a free consultation or explore my GitHub projects to see how I can help scale your business.
+                            Book a free consultation or explore my GitHub projects to see how I can help scale your
+                            business.
                         </p>
                         <div class="hero-btns cta-buttons">
                             <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Book free consultation"
@@ -511,8 +523,11 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <h2 class="text-start mb-4">About me</h2>
-                            <p>I’m a full-stack software engineer specializing in MERN stack, AWS cloud solutions, and AI-powered web app development. I build secure, scalable, and maintainable web applications that grow with your business.</p>
-                            <p>I partner with startups, SMBs, and tech founders who want to launch or scale web apps quickly, without headaches, delays, or messy handovers.</p>
+                            <p>I’m a full-stack software engineer specializing in MERN stack, AWS cloud solutions, and
+                                AI-powered web app development. I build secure, scalable, and maintainable web
+                                applications that grow with your business.</p>
+                            <p>I partner with startups, SMBs, and tech founders who want to launch or scale web apps
+                                quickly, without headaches, delays, or messy handovers.</p>
                             <div class="text-center mt-5 mt-lg-2 mb-5 mb-lg-2 d-block d-lg-none about-img">
                                 <img class="img-fluid" src="assets/images/about-1.svg" alt="About Peyton Hoang">
                             </div>
@@ -520,7 +535,8 @@
                             <div class="mt-3 mt-lg-2">
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Milestone-based delivery & fixed-price milestones — know exactly what you’re paying for.</span>
+                                    <span>Milestone-based delivery & fixed-price milestones — know exactly what you’re
+                                        paying for.</span>
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
@@ -528,7 +544,8 @@
                                 </div>
                                 <div class="services-card__check">
                                     <i class="fa-regular fa-circle-check" style="color: #118ab2;"></i>
-                                    <span>Production-ready code & full handover docs — scalable, maintainable, and ready for future growth.</span>
+                                    <span>Production-ready code & full handover docs — scalable, maintainable, and ready
+                                        for future growth.</span>
                                 </div>
                             </div>
                             <div class="mt-4">
@@ -909,7 +926,8 @@
         <section class="section" id="recentWork">
             <div class="container">
                 <h2>Recent works</h2>
-                <h4 class="mt-3 text-center">Turning ideas into secure, scalable, and production-ready web applications</h4>
+                <h4 class="mt-3 text-center">Turning ideas into secure, scalable, and production-ready web applications
+                </h4>
                 <div class="row mt-1 mt-sm-2 mt-lg-4 gx-5 gy-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="recent-work__info">
@@ -922,7 +940,10 @@
                                 title="Content Repurposer"></iframe></div>
                         <div class="recent-work__info">
                             <p class="recent-work-description">Description:
-                                A full-stack MERN + AI SaaS that transforms long-form blogs into ready-to-share posts for Twitter, LinkedIn, and Instagram. Built with secure Firebase Authentication, scalable MongoDB, and Vercel deployment, this tool helps creators cut content workflows from hours to minutes.</p>
+                                A full-stack MERN + AI SaaS that transforms long-form blogs into ready-to-share posts
+                                for Twitter, LinkedIn, and Instagram. Built with secure Firebase Authentication,
+                                scalable MongoDB, and Vercel deployment, this tool helps creators cut content workflows
+                                from hours to minutes.</p>
                             <div class="mt-1">
                                 <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Free Consult"
                                     class="boton-elegante" target="_blank">
@@ -942,7 +963,9 @@
                                 title="Etsy Seller Tool"></iframe></div>
                         <div class="recent-work__info">
                             <p class="recent-work-description">Description:
-                                An AI-integrated MERN app for new Etsy sellers, automating everything from shop names, product SEO tags, and branding visuals to pricing strategies. Built with Supase Auth and PostgreSQL, this platform streamlines e-commerce setup and boosts seller efficiency.
+                                An AI-integrated MERN app for new Etsy sellers, automating everything from shop names,
+                                product SEO tags, and branding visuals to pricing strategies. Built with Supase Auth and
+                                PostgreSQL, this platform streamlines e-commerce setup and boosts seller efficiency.
                             </p>
                             <div class="mt-1">
                                 <a href="https://calendly.com/peyton-hoang97/30min" aria-label="Free Consult"
@@ -953,13 +976,17 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-8">
-                        <img class="img-fluid mt-4 mt-lg-5" src="assets/images/git-profile.avif" alt="Github Profile">
+                        <div class="recent-work__info mt-4 mt-lg-5">
+                            <p><b>GitHub Portfolio <br>– Full-Stack & AI-Powered Apps</b></p>
+                        </div>
+                        <img class="img-fluid " src="assets/images/git-profile.avif" alt="Github Profile">
                         <div class="recent-work__info">
-                            <p class="recent-work-description">Description:
-                                Full-stack apps, AI integrations, SaaS MVPs — all code is production-ready and
-                                well-documented.
+                            <p class="recent-work-description">GitHub Portfolio – Full-Stack & AI-Powered Apps
+                                Explore production-ready, well-documented full-stack applications, AI integrations, and
+                                SaaS MVPs — built with MERN, AWS, and modern cloud technologies for scalability and
+                                reliability.
                             </p>
-                            <div class="mt-1 text-center">
+                            <div class="mt-2 text-center">
                                 <a href="https://github.com/PhuongHoang68" aria-label="Free Consult"
                                     class="boton-elegante" target="_blank">
                                     See 36+ Projects on GitHub
@@ -998,9 +1025,10 @@
                     <h4>Peyton Hoang Consulting</h4>
                     <p>Software engineer contractor</p>
                     <div class="social-icons">
-                        <a href="http://www.linkedin.com/in/peyton-hoang" aria-label="Peyton linkedin" target="_blank"><i
-                                class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="https://www.upwork.com/freelancers/~01b70563a5315ceddd" aria-label="Peyton upwork" target="_blank"><i class="fa-brands fa-upwork" style="font-size: 20px;"></i></a>
+                        <a href="http://www.linkedin.com/in/peyton-hoang" aria-label="Peyton linkedin"
+                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.upwork.com/freelancers/~01b70563a5315ceddd" aria-label="Peyton upwork"
+                            target="_blank"><i class="fa-brands fa-upwork" style="font-size: 20px;"></i></a>
                     </div>
                 </div>
 
